rnc/src/snapshots/muffy_rnc__tests__parse_file-50.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
        Datatypes(
            DatatypesDeclaration {
                prefix: Some(
                    "w",
                ),
                uri: "http://whattf.org/datatype-draft",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "Boolean.datatype",
                            combine: None,
                            pattern: Choice(
                                [
                                    Value {
                                        name: None,
                                        value: "false",
                                    },
                                    Value {
                                        name: None,
                                        value: "true",
                                    },
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "ClipFillRule.datatype",
                            combine: None,
                            pattern: Choice(
                                [
                                    Value {
                                        name: None,
                                        value: "nonzero",
                                    },
                                    Value {
                                        name: None,
                                        value: "evenodd",
                                    },
                                    Value {
                                        name: None,
                                        value: "inherit",
                                    },
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "ContentType.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Coordinate.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Coordinates.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Color.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Integer.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "LanguageCode.datatype",
                            combine: None,
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: Some(
                                                "xsd",
                                            ),
                                            local: "language",
                                        },
                                    ),
                                    Value {
                                        name: Some(
                                            Name {
                                                prefix: None,
                                                local: "string",
                                            },
                                        ),
                                        value: "",
                                    },
                                ],
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "LanguageCodes.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Length.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Lengths.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Number.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Numbers.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "OpacityValue.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "PathData.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "w",
                                    ),
                                    local: "svg-pathdata",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "PreserveAspectRatioSpec.datatype",
                            combine: None,
                            pattern: Data {
                                name: Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                                parameters: [
                                    Parameter {
                                        name: Name {
                                            prefix: None,
                                            local: "pattern",
                                        },
                                        value: "([ \t\r\n])*(defer([ \t\r\n])+)?(none|xMinYMin|xMidYMin|xMaxYMin|xMinYMid|xMidYMid|xMaxYMid|xMinYMax|xMidYMax|xMaxYMax)(([ \t\r\n])+(meet|slice))?([ \t\r\n])*",
                                    },
                                ],
                                except: None,
                            },
                        },
                    ),
                    Define(
                        Definition {
                            name: "Script.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVGColor.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "Text.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "TransformList.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "URI.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "anyURI",
                                },
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "ViewBoxSpec.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
